syntax = "proto3";

option java_package = "ir.micser.geo.business.service.city.stub";

message ReadByIdRequestModel{
  int32 id = 1 ;
}

message ReadByIdResponseModel{
  int32 transaction_id=1;
  int32  id = 2;
  string title = 3;
}

message Empty{
}

service City{
  rpc grpcReadById(ReadByIdRequestModel)  returns (ReadByIdResponseModel);
}